--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,12 +27,22 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+               <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Caramac 10.0.0</th>
+        <td class="govuk-table__cell ">
+            <p>Stopped version for MVSv2</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>added submission history to reports page</li>               
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="10-0-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="10-0-0/start.html">Start now</a></td>
+    </tr>
        <tr class="govuk-table__row">
          <th class="govuk-table__header" scope="row">Kit Kat 9.4.2<p>This is not MVS, for testing only.</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
-           <p>We added:</p>
-            <!--<li>overlapping periods</li>-->
+           <p>We added:</p>            
             <li>period closed</li>
             <li>iteration of the reports pages</li>
             </ul>
@@ -76,7 +86,7 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
-           <tr class="govuk-table__row">
+       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.6</th>
         <td class="govuk-table__cell ">
             <p>Stopped version for MVS</p>
