--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,18 +28,20 @@
   </thead>
   <tbody class="govuk-table__body">
                <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">Caramac 10.0.0</th>
+      <th class="govuk-table__header" scope="row">Caramac 10.0.0<p>15/10/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Stopped version for MVSv2</p>
+            <!--<p>Stopped version for MVSv2</p>-->
+            <p>Caramac is an MVS based on ILR, EAS and ESF supplimentary collections types only. All reports are available.</p>
             <ul class="govuk-list govuk-list--bullet">
-                <li>added submission history to reports page</li>               
+                <li>added submission history to reports page</li>
+                <li>iterated reports area</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="10-0-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="10-0-0/start.html">Start now</a></td>
     </tr>
        <tr class="govuk-table__row">
-         <th class="govuk-table__header" scope="row">Kit Kat 9.4.2<p>This is not MVS, for testing only.</p></th>
+         <th class="govuk-table__header" scope="row">Kit Kat 9.4.2<p>This is not MVS, for testing only.</p><p>10/10/2018</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
            <p>We added:</p>            
@@ -51,7 +53,7 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-2/start.html">Start now</a></td>
     </tr>
      <tr class="govuk-table__row">
-         <th class="govuk-table__header" scope="row">Kit Kat 9.4.1<p>This is not MVS, for testing only.</p></th>
+         <th class="govuk-table__header" scope="row">Kit Kat 9.4.1<p>This is not MVS, for testing only.</p><p>03/10/2018</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
            <p>We added:</p>
@@ -65,12 +67,12 @@
     </tr>
       
        <tr class="govuk-table__row">
-           <th class="govuk-table__header" scope="row">Kit Kat 9.4.0 <p>This is not MVS, for testing only.</p></th>
+           <th class="govuk-table__header" scope="row">Kit Kat 9.4.0 <p>This is not MVS, for testing only.</p><p>17/09/2018</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
             <p>We added:</p>
             <li>email template</li>
-            <li>step by step concept (includes link to downloads and services | Not MVP)</li>
+            <li>step by step concept</li>
             <li>reports only journey options</li>
             <li>communication banner</li>
             <li>new reports page</li>
@@ -87,7 +89,7 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
        <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.6</th>
+      <th class="govuk-table__header" scope="row">9.3.6<p>10/10/2018</p></th>
         <td class="govuk-table__cell ">
             <p>Stopped version for MVS</p>
             <ul class="govuk-list govuk-list--bullet">
@@ -98,7 +100,7 @@
         <td class="govuk-table__cell "><a href="./9-3-6/start.html">Start now</a></td>
     </tr>
       <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.5</th>
+      <th class="govuk-table__header" scope="row">9.3.5<p>06/10/2018</p></th>
         <td class="govuk-table__cell ">
             <p>Stopped version for MVS</p>
             <ul class="govuk-list govuk-list--bullet">
@@ -110,7 +112,7 @@
         <td class="govuk-table__cell "><a href="./9-3-5/start.html">Start now</a></td>
     </tr>
          <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.4</th>
+      <th class="govuk-table__header" scope="row">9.3.4<p>05/10/2018</p></th>
         <td class="govuk-table__cell ">
          Stopped version for MVS - added 'return period closed' journey
         </td>
@@ -118,15 +120,27 @@
         <td class="govuk-table__cell "><a href="./9-3-4/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.3</th>
-        <td class="govuk-table__cell ">
-         Stopped version for MVS - removed reports and EAS
+      <th class="govuk-table__header" scope="row">9.3.3<p>04/10/2018</p></th>
+        <td class="govuk-table__cell ">            
+            <p>Stopped version for MVS - removed reports and EAS</p>            
         </td>
         <td class="govuk-table__cell "><a href="9-3-3/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-3-3/start.html">Start now</a></td>
     </tr>
           <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.2</th>
+      <th class="govuk-table__header" scope="row">9.3.2<p>07/09/2018</p></th>
+        <td class="govuk-table__cell">
+            <p>Testing was done using Axure for EAS then moved the the ptype for development.</p>
+            We:
+          <ul class="govuk-list govuk-list--bullet">            
+            <li>added the EAS journey</li>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-1/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.1<p>09/08/2018</p></th>
         <td class="govuk-table__cell ">
             We:
           <ul class="govuk-list govuk-list--bullet">            
@@ -137,18 +151,7 @@
         <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.1</th>
-        <td class="govuk-table__cell ">
-            We:
-          <ul class="govuk-list govuk-list--bullet">            
-            <li>added the EAS journey</li>
-          </ul>
-        </td>
-        <td class="govuk-table__cell "><a href="9-3-1/contents.html">Contents</a></td>
-        <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.3.0</th>
+      <th class="govuk-table__header" scope="row">9.3.0<p>07/08/2018</p></th>
         <td class="govuk-table__cell ">
             We:
           <ul class="govuk-list govuk-list--bullet">
@@ -161,7 +164,7 @@
         <td class="govuk-table__cell "><a href="./9-3-0/start.html">Start now</a></td>
     </tr>
      <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.2.5</th>
+      <th class="govuk-table__header" scope="row">9.2.5<p>01/08/2018</p></th>
         <td class="govuk-table__cell ">
           
             
@@ -172,7 +175,7 @@
         <td class="govuk-table__cell "><a href="./9-2-5/start.html">Start now</a></td>
     </tr>
 	  <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.2.0</th>
+      <th class="govuk-table__header" scope="row">9.2.0 <p>01/08/2018</p></th>
     		<td class="govuk-table__cell ">
                 We:
           <ul class="govuk-list govuk-list--bullet">    			  
@@ -184,7 +187,7 @@
 		    <td class="govuk-table__cell "><a href="./9-2-0/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.1.5</th>
+      <th class="govuk-table__header" scope="row">9.1.5 <p>30/07/2018</p></th>
         <td class="govuk-table__cell ">
          
          
@@ -195,7 +198,7 @@
         <td class="govuk-table__cell "><a href="./9-1-5/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.1.0</th>
+      <th class="govuk-table__header" scope="row">9.1.0<p>30/07/2018</p></th>
         <td class="govuk-table__cell ">
             We:
           <ul class="govuk-list govuk-list--bullet">
@@ -208,7 +211,7 @@
         <td class="govuk-table__cell "><a href="./9-1-0/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">9.0.0</th>
+      <th class="govuk-table__header" scope="row">9.0.0<p>13/07/2018</p></th>
 		<td class="govuk-table__cell ">
 			We:
             <ul class="govuk-list govuk-list--bullet">
