--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
   </thead>
   <tbody class="govuk-table__body">
                <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">Caramac 10.0.0<p>15/10/2018</p></th>
+      <th class="govuk-table__header" scope="row">Caramac 10.0.0<p>In testing.</p><p>15/10/2018</p></th>
         <td class="govuk-table__cell ">
             <!--<p>Stopped version for MVSv2</p>-->
             <p>Caramac is an MVS based on ILR, EAS and ESF supplimentary collections types only. All reports are available.</p>
