--- a/app/views/10-0-0/contents.html
+++ b/app/views/10-0-0/contents.html
@@ -95,6 +95,20 @@
             <li><a href="./reports_closed.html">Reports (closed period, archive)</a></li>
 		</ul>
         
+        <h2 class="govuk-heading-l">ILR User Journey (Overlapping periods)</h2>
+		
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>
+		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+            <li><a href="choose_period.html">Choose period</a></li>
+			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
+			<li><a href="your_files_uploading.html">Your file's uploading</a></li>
+			<li><a href="theres_a_problem.html">There's a problem</a></li>			
+			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
+            <li><a href="return-period.html">Reports</a></li>
+		</ul>
+        
         <h2 class="govuk-heading-l">Scenarios</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
