--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,6 +35,10 @@
             <ul class="govuk-list govuk-list--bullet">
                 <li>added submission history to reports page</li>
                 <li>iterated reports area</li>
+                <li>iterated period closed scenario</li>
+                <li>added overlapping periods</li>
+                <li>reports archive</li>
+                <li>multiple upload for ESF</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="10-0-0/contents.html">Contents</a></td>
