--- a/app/views/10-0-0/choose_period.html
+++ b/app/views/10-0-0/choose_period.html
@@ -21,39 +21,34 @@
   </div>
 </div>
         	
-		<form action="choose_period" method="get" class="form">
+		<form action="choose_file_to_upload" method="get" class="form">
 			<div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-         What do you want to submit? 
+         Choose period
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ilr">
+        <input class="govuk-radios__input" id="return-period" name="return-period" type="radio" value="2">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
-        ILR (Individualised Learner Records)
+        Return period 2
       </label>
       </div>
      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
+        <input class="govuk-radios__input" id="return-period-2" name="return-period" type="radio" value="13" disabled>
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
-        EAS (Earnings Adjustment Statement) 
+        Return period 13
       </label>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
-        <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-        ESF (European Social Fund) supplementary data
-      </label>
-      </div>
+    
       </div>
   </fieldset>	 
 			</div>
-<button class="govuk-button">
+<a href="./choose_file_to_upload.html" class="govuk-button">
   Continue
-</button>
+</a>
 			
 		</form>
     </div>
