--- a/app/views/index.html
+++ b/app/views/index.html
@@ -92,6 +92,18 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
+      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.7<p>16/10/2018</p></th>
+        <td class="govuk-table__cell ">
+            <p>Stopped version for MVS</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>removed the blue banner</li>
+                <li>consolidated the reports into one zip file</li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-7/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-7/start.html">Start now</a></td>
+    </tr>
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.6<p>10/10/2018</p></th>
         <td class="govuk-table__cell ">
