--- a/app/views/index.html
+++ b/app/views/index.html
@@ -95,7 +95,7 @@
       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.7<p>16/10/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Stopped version for MVS</p>
+            <p>MVS - in progress</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>removed the blue banner</li>
                 <li>consolidated the reports into one zip file</li>
