--- a/app/views/9-3-7/contents.html
+++ b/app/views/9-3-7/contents.html
@@ -20,7 +20,7 @@
 
 		<h2 class="govuk-heading-l">ILR User Journey (Happy path)</h2>
 		
-		<ul class="govuk-list govuk-list--number">
+		<!--<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
@@ -29,22 +29,21 @@
 			<li><a href="theres_a_problem.html">There's a problem</a></li>			
 			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
             <li><a href="return-period.html">Reports</a></li>
-		</ul>
+		</ul>-->
         <h2 class="govuk-heading-l">ILR User Journey (Uber happy path)</h2>		
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>
-		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+		   	<!--<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>-->
 			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
 			<li><a href="your_files_uploading.html">Your file's uploading</a></li>		
 			<li><a href="ilr_data_submitted_clean.html">ILR data submitted (Clean file)</a></li>
             <li><a href="return-period.html">Reports</a></li>
 		</ul>
         
-        <h2 class="govuk-heading-l">ILR User Journey (Only ILR available to submit)</h2>
+        <h2 class="govuk-heading-l">ILR User Journey</h2>
         
-        <p>This journey misses out the 'what do you want to submit page'.</p>
-		
+     
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>		   	
@@ -69,7 +68,7 @@
 		</ul>-->
 
 
-		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
+		<!--<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
 		
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
@@ -80,25 +79,25 @@
 			<li><a href="esf_data_submitted.html">ESF data submitted</a></li>
             <li><a href="return-period.html">Reports</a></li>
 			
-		</ul>
+		</ul>-->
 
 	<h2 class="govuk-heading-l">ILR User Journey (Period is closed)</h2>
 		
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>
-		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
-			<li><a href="choose_file_to_upload_closed.html">Choose file to upload</a></li>
-			<li><a href="your_files_uploading_closed.html">Your file's uploading</a></li>
-			<li><a href="theres_a_problem_closed.html">There's a problem</a></li>			
-			<li><a href="ilr_data_submitted_closed.html">ILR data submitted</a></li>
+		   	<!--<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>-->
+			<li><a href="choose_file_to_upload_closed.html">Choose file to upload (closed period)</a></li>
+			<li><a href="your_files_uploading_closed.html">Your file's uploading (closed period)</a></li>
+			<li><a href="theres_a_problem_closed.html">There's a problem (closed period)</a></li>			
+			<li><a href="ilr_data_submitted_closed.html">ILR data submitted (closed period)</a></li>
             <li><a href="./ilr-email-for-provider-closed.html">ILR email for providers (closed period)</a></li>
 		</ul>
         
         <h2 class="govuk-heading-l">Scenarios</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (to appear after ESF is chosen)</a></li>
+			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (and no file can be submitted)</a></li>
 			
 		</ul>
 		
@@ -111,8 +110,8 @@
         <h2 class="govuk-heading-l">Emails</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="./ilr-email-for-provider.html">ILR email for provider (Processing)</a></li>
-            <li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (View reports)</a></li>
+			<li><a href="./ilr-email-for-provider.html">ILR email for provider (processing)</a></li>
+            <li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (view reports)</a></li>
             <li><a href="./ilr-email-for-provider-closed.html">ILR email for providers (closed period)</a></li>
 			
 		</ul>        
