--- a/app/views/index.html
+++ b/app/views/index.html
@@ -99,6 +99,8 @@
             <ul class="govuk-list govuk-list--bullet">
                 <li>removed the blue banner</li>
                 <li>consolidated the reports into one zip file</li>
+                <li>removed ESF</li>
+                <li>removed 'what do you want to submit'</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-3-7/contents.html">Contents</a></td>
