--- a/app/views/9-3-7/choose_file_to_upload.html
+++ b/app/views/9-3-7/choose_file_to_upload.html
@@ -1,9 +1,6 @@
 
-{% extends "./layout.html" %}
+{% extends "./layout_noback_signedin.html" %}
 
-{% block beforeContent %}
-  {% include "./includes/back_what_data_do_you_want_to_submit.html" %}
-{% endblock %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
