--- a/app/views/9-3-7/idams.html
+++ b/app/views/9-3-7/idams.html
@@ -32,7 +32,7 @@
   </label>
     <input class="govuk-input govuk-!-width-two-thirds" id="password" name="password" type="password">
   </div>
-	<a href="./what_data_do_you_want_to_submit.html" type="submit" class="govuk-button">Sign in</a>
+	<a href="./choose_file_to_upload.html" type="submit" class="govuk-button">Sign in</a>
 
 		</fieldset>
 		<h2 class="govuk-heading-m">Problems signing in?</h2>
