--- a/app/views/9-3-7/what_data_do_you_want_to_submit.html
+++ b/app/views/9-3-7/what_data_do_you_want_to_submit.html
@@ -32,12 +32,12 @@
         EAS (Earnings Adjustment Statement) 
       </label>
       </div>-->
-      <div class="govuk-radios__item">
+      <!--<div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
         ESF (European Social Fund) supplementary data
       </label>
-      </div>
+      </div>-->
       </div>
   </fieldset>	 
 			</div>
