--- a/app/views/9-3-7/return-period.html
+++ b/app/views/9-3-7/return-period.html
@@ -14,7 +14,7 @@
         <h2 class="govuk-heading-l">Return Period 2 (R02)</h2>
         <p><a href="#">Download reports</a> (Zip, 1.3MB)</p>
         
-        <p>If you need to correct the data you've submitted, <a href="what_data_do_you_want_to_submit.html">submit another file</a>.</p>  
+        <p>If you need to correct the data you've submitted, <a href="choose_file_to_upload.html">submit another file</a>.</p>  
         
         <p><a href="https://hub.fasst.org.uk">View reports for other periods</a></p>
        
