--- a/app/views/9-3-7/ilr_data_submitted_clean.html
+++ b/app/views/9-3-7/ilr_data_submitted_clean.html
@@ -41,7 +41,7 @@
     </details>
 
 		<p><a href="./return-period.html">View reports page</a></p>
-		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
+		<p><a href="./choose_file_to_upload.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_help.html" %}
