updated start page

--- a/app/views/9-3-7/start.html
+++ b/app/views/9-3-7/start.html
@@ -18,9 +18,8 @@
 
 		<p>Use this service to validate and submit:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li>Individualised learner records (ILR)</li> 
-			<!--<li>Earnings adjustment statements (EAS)</li>--> 
-			<li>ESF (European Social Fund) supplementary data</li>
+			<li>validate and submit your individualised learner records (ILR)</li>
+            <li>view and download related reports</li>
 		</ul>
         
         <h2 class="govuk-heading-m">Before you start</h2>
@@ -28,11 +27,10 @@
 		<p>You will need:</p>
 		<ul class="govuk-list govuk-list--bullet">
 			<li>your IdAMS (Information Management Services system) login details</li>
-			<li>an XML or Zip file to upload - for ILR data</li>
-			<li>a CSV file to upload - for ESF data</li>
+			<li>an XML or Zip file to upload</li>		
 		</ul>  
 
-		<!--<p>You can also view and download reports for data you’ve submitted.</p>-->
+		
 		<a href="./idams.html" role="button" class="govuk-button govuk-button--start">
   Sign in
 </a>
