--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,6 +36,7 @@
                 <li>consolidated the reports into one zip file</li>
                 <li>removed ESF</li>
                 <li>removed 'what do you want to submit'</li>
+                <li>updated the start page</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-3-7/contents.html">Contents</a></td>
