--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.7<p>16/10/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>MVS - in progress</p>
+            <p>MVS - locked down as of 17/10/18</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>removed the blue banner</li>
                 <li>consolidated the reports into one zip file</li>
@@ -43,9 +43,8 @@
         <td class="govuk-table__cell "><a href="./9-3-7/start.html">Start now</a></td>
     </tr>
  <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">Caramac 10.0.0<p>In testing.</p><p>15/10/2018</p></th>
-        <td class="govuk-table__cell ">
-            <!--<p>Stopped version for MVSv2</p>-->
+      <th class="govuk-table__header" scope="row">Caramac 10.0.0<p>15/10/2018</p></th>
+        <td class="govuk-table__cell ">          
             <p>Caramac is an MVS based on ILR, EAS and ESF supplimentary collections types only. All reports are available.</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>added submission history to reports page</li>
