--- a/app/views/9-3-7/contents.html
+++ b/app/views/9-3-7/contents.html
@@ -18,7 +18,7 @@
         	Please do not enter any personal information. This prototype is not secure.
       	</p>
 
-		<h2 class="govuk-heading-l">ILR User Journey (Happy path)</h2>
+		<!--<h2 class="govuk-heading-l">ILR User Journey (Happy path)</h2>-->
 		
 		<!--<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
