--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,20 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.8<p>22/10/2018</p></th>
+        <td class="govuk-table__cell ">
+            <p>MVS - inprogress as of 23/10/18</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>reintroduced EAS</li>
+                <li>reintroduced ESF</li>               
+                <li>reintroduced 'what do you want to submit'</li>
+                <li>rolled back the start page to include 3 collections</li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-8/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-8/start.html">Start now</a></td>
+    </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.7<p>16/10/2018</p></th>
         <td class="govuk-table__cell ">
