--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
           <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.8<p>22/10/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>MVS - in progress as of 22/10/18</p>
+            <p>MVS - Stopped as of 23/10/18</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>reintroduced EAS</li>
                 <li>reintroduced ESF</li>               
