--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,18 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.0.0<p>01/11/2018</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress 01/11/2018</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a href="11-0-0/theres_a_problem_datamatch.html">moved data match to validation stage</a></li>
+                <li><a href="11-0-0/theres_a_problem.html">iterated content slightly on problem page to cope with data match when added</a></li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-0-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./11-0-0/start.html">Start now</a></td>
+    </tr>
           <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.8<p>22/10/2018</p></th>
         <td class="govuk-table__cell ">
