--- a/app/views/11-0-0/theres_a_problem_closed.html
+++ b/app/views/11-0-0/theres_a_problem_closed.html
@@ -29,7 +29,7 @@
 		  </div>
 		</div>
 	
-		<h1 class="govuk-heading-xl">Problems with your learner data<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
+		<h1 class="govuk-heading-xl">Problems with the data<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
 
 		<p id="error"><span class="govuk-!-font-weight-bold">Total learners in file</span>: 3,893</p>
 
