--- a/app/views/11-0-0/return-period.html
+++ b/app/views/11-0-0/return-period.html
@@ -12,7 +12,7 @@
 		<h1 class="govuk-heading-xl">Reports</h1>
         
         <h2 class="govuk-heading-l">Return Period 2 (R02)</h2>
-        <p><a href="#">Download reports</a> (Zip, 1.3MB)</p>
+        <p><a href="#">Download reports</a> (Zip, 1.3MB) for reference 320 submited on 28 October 2018. You have another file pending which will update these reports.</p>
         
         <p>If you need to correct the data you've submitted, <a href="choose_file_to_upload.html">submit another file</a>.</p>  
         
@@ -28,6 +28,7 @@
       <th class="govuk-table__header" scope="col">Date</th>
         <th class="govuk-table__header" scope="col">Type</th>
       <th class="govuk-table__header" scope="col">File</th>
+        <th class="govuk-table__header" scope="col">Reference</th>
     
     </tr>
   </thead>
@@ -36,19 +37,19 @@
       <th class="govuk-table__header" scope="row">30 October 2018</th>
         <td class="govuk-table__cell">ILR</td>
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
-    
+    <td class="govuk-table__cell">345</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">28 October 2018</th>
         <td class="govuk-table__cell">ESF</td>
         <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
-        
+        <td class="govuk-table__cell">320</td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">24 October 2018</th>
         <td class="govuk-table__cell">ILR</td>
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
-
+<td class="govuk-table__cell">290</td>
     </tr>
   </tbody>
 </table>
