--- a/app/views/11-0-0/what_data_do_you_want_to_submit.html
+++ b/app/views/11-0-0/what_data_do_you_want_to_submit.html
@@ -16,30 +16,37 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-         What do you want to submit? 
+         What do you want to do? 
       </h1>
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-1" name="whattosubmit" type="radio" value="ilr">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-1">
-        ILR (Individualised Learner Records)
+        Upload ILR (Individualised Learner Records) data
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
-        EAS (Earnings Adjustment Statement) 
+       Update EAS (Earnings Adjustment Statement)
       </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
-        ESF (European Social Fund) supplementary data
+       Upload ESF (European Social Fund) supplementary data
+      </label>
+      </div>
+      <div class="govuk-radios__divider">or</div>
+         <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="reports">
+        <label class="govuk-label govuk-radios__label" for="what-to-submit-4">
+        Download reports
       </label>
       </div>
       </div>
-  </fieldset>	 
+  </fieldset>	 	 
 			</div>
 <button class="govuk-button">
   Continue
