--- a/app/views/11-0-0/return-period.html
+++ b/app/views/11-0-0/return-period.html
@@ -32,6 +32,7 @@
    
         
        <h2 class="govuk-heading-l" id="submission">Submission history</h2>
+        <p>Each time you submit a new file your reports will be updated. To view your latest reports you should download the reports for your most recent submission.</p>
              
               <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
