--- a/app/views/11-0-0/return-period.html
+++ b/app/views/11-0-0/return-period.html
@@ -52,7 +52,7 @@
         <!--<td class="govuk-table__cell">ILR</td>-->
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
          <!--<td class="govuk-table__cell">300</td>-->
-        <td class="govuk-table__cell"><a href="#">REPORTS-301018-01.ZIP</a></td>
+        <td class="govuk-table__cell">Processing</td>
     
     </tr>
     <tr class="govuk-table__row">
