--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.0.0<p>01/11/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Private Beta - in progress 01/11/2018</p>
+            <p>Private Beta - stopped 06/11/2018</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a href="11-0-0/theres_a_problem_datamatch.html">moved data match to validation stage</a></li>
                 <li><a href="11-0-0/theres_a_problem.html">iterated content slightly on problem page to cope with data match when added</a></li>
