--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,6 +35,7 @@
                 <li><a href="11-0-0/theres_a_problem_datamatch.html">moved data match to validation stage</a></li>
                 <li><a href="11-0-0/theres_a_problem.html">iterated content slightly on problem page to cope with data match when added</a></li>
                   <li><a href="11-0-0/return-period.html">updated submission history functionality to include reports and added funding summary values</a></li>
+                <li><a href="11-0-0/what_data_do_you_want_to_submit.html">Iterated content and added 'reports' radio</a></li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="11-0-0/contents.html">Contents</a></td>
