--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,19 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+            <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.1.0<p>08/11/2018</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a href="11-1-0/theres_a_problem_datamatch.html">Updated 'theres a problem' page - with app data match</a></li>
+                <li><a href="11-1-0/theres_a_problem.html">Updated 'theres a problem' page - withOUT app data match</a></li>
+               
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-1-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./11-1-0/start.html">Start now</a></td>
+    </tr>
       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.0.0<p>01/11/2018</p></th>
         <td class="govuk-table__cell ">
