--- a/app/views/11-1-0/theres_a_problem.html
+++ b/app/views/11-1-0/theres_a_problem.html
@@ -18,7 +18,7 @@
 		<h1 class="govuk-heading-xl">Problems with the data<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
         
         <div class="govuk-inset-text">
-            <p>ILR file not submitted. There are errors, warnings and data match problems for the learner data in your file.</p>
+            <p>ILR file not submitted. There are errors and warnings for the learner data in your file.</p>
             
 </div> 
 		<p><span class="govuk-!-font-weight-bold">Total learners in file</span>: 3,893</p>
