submission history update

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,7 @@
             <ul class="govuk-list govuk-list--bullet">
                 <li><a href="11-1-0/theres_a_problem_datamatch.html">Updated 'theres a problem' page - with app data match</a></li>
                 <li><a href="11-1-0/theres_a_problem.html">Updated 'theres a problem' page - withOUT app data match</a></li>
+                <li><a href="11-1-0/return-period.html">Added 'submitted by' to the submissions history table</a></li>
                
             </ul>
         </td>
