--- a/app/views/11-1-0/return-period.html
+++ b/app/views/11-1-0/return-period.html
@@ -41,7 +41,7 @@
       <th class="govuk-table__header" scope="col">Date</th>
         <!--<th class="govuk-table__header" scope="col">Type</th>-->
       <th class="govuk-table__header" scope="col">File</th>
-       <!--<th class="govuk-table__header" scope="col">Reference</th>-->
+      <th class="govuk-table__header" scope="col">Submitted by</th>
     <th class="govuk-table__header" scope="col">Reports</th>
     
     </tr>
@@ -51,15 +51,15 @@
       <th class="govuk-table__header" scope="row">30 October 2018</th>
         <!--<td class="govuk-table__cell">ILR</td>-->
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
-         <!--<td class="govuk-table__cell">300</td>-->
-        <td class="govuk-table__cell">Processing</td>
+         <td class="govuk-table__cell">Sam Smith</td>
+<td class="govuk-table__cell">Processing</td>
     
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">28 October 2018</th>
         <!--<td class="govuk-table__cell">ESF</td>-->
         <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
-         <!--<td class="govuk-table__cell">295</td>-->
+         <td class="govuk-table__cell">Sam Smith</td>
         <td class="govuk-table__cell"><a href="#">REPORTS-281018-01.ZIP</a></td>
         
     </tr>
@@ -67,7 +67,7 @@
       <th class="govuk-table__header" scope="row">24 October 2018</th>
        <!--<td class="govuk-table__cell">ILR</td>-->
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
-         <!--<td class="govuk-table__cell">200</td>-->
+         <td class="govuk-table__cell">Bob Afett</td>
         <td class="govuk-table__cell"><a href="#">REPORTS-241018-02.ZIP</a></td>
 
     </tr>
