upload page updated

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,6 +35,7 @@
                 <li><a href="11-1-0/theres_a_problem_datamatch.html">Updated 'theres a problem' page - with app data match</a></li>
                 <li><a href="11-1-0/theres_a_problem.html">Updated 'theres a problem' page - withOUT app data match</a></li>
                 <li><a href="11-1-0/return-period.html">Added 'submitted by' to the submissions history table</a></li>
+                <li><a href="11-1-0/choose_file_to_upload.html">Added 'submission history' to the choose file to upload page</a></li>
                
             </ul>
         </td>
