--- a/app/views/11-1-0/choose_file_to_upload.html
+++ b/app/views/11-1-0/choose_file_to_upload.html
@@ -10,6 +10,14 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+          <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
+     Last file submitted on 28 October 2018
+  </h2>
+  <div class="govuk-highlight-summary__body">
+      <p>Jane Smith submitted file SUPPDATA-12345678-ESF-8976-20180806-151209.CSV.</p><p> <a href="return-period.html">Check submission history</a>.</p>
+  </div>
+</div>
 
     <form action="your_files_uploading" method="get" class="form">
 	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
