--- a/app/views/11-1-0/choose_file_to_upload.html
+++ b/app/views/11-1-0/choose_file_to_upload.html
@@ -15,7 +15,7 @@
      Last file submitted on 28 October 2018
   </h2>
   <div class="govuk-highlight-summary__body">
-      <p>Jane Smith submitted file SUPPDATA-12345678-ESF-8976-20180806-151209.CSV.</p><p> <a href="return-period.html">Check submission history</a>.</p>
+      <p>Jane Smith submitted file SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</p><p> <a href="return-period.html">View submission history</a></p>
   </div>
 </div>
 
