--- a/app/views/11-1-0/eas_data_submitted.html
+++ b/app/views/11-1-0/eas_data_submitted.html
@@ -18,7 +18,7 @@
            EAS statement updated
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 1234
+			  Submission reference: 1234
            
           </div>
         </div>		
@@ -42,7 +42,7 @@
       </div>
     </details>
 
-		<p><a href="./return-period.html">View reports page</a></p>
+		<p><a class="govuk-button" href="./return-period.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
