--- a/app/views/11-1-0/esf_data_submitted.html
+++ b/app/views/11-1-0/esf_data_submitted.html
@@ -18,7 +18,7 @@
             R02 supplementary data file submitted
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 123456789
+			  Submission reference: 123456789
            
           </div>
         </div>		
@@ -43,7 +43,7 @@
       </div>
     </details>
 
-		<p><a href="./return-period.html">View reports page</a></p>
+		<p><a class="govuk-button" href="./return-period.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
