--- a/app/views/11-1-0/ilr_data_submitted_clean.html
+++ b/app/views/11-1-0/ilr_data_submitted_clean.html
@@ -15,7 +15,7 @@
             R02 ILR file submitted
           </h2>
           <div class="govuk-panel__body">
-			  Reference: 23693
+			  Submission reference: 23693
            
           </div>
         </div>		
@@ -40,7 +40,7 @@
       </div>
     </details>
 
-		<p><a href="./return-period.html">View reports page</a></p>
+		<p><a class="govuk-button" href="./return-period.html">View reports page</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
