--- a/app/views/11-1-0/theres_a_problem.html
+++ b/app/views/11-1-0/theres_a_problem.html
@@ -15,10 +15,10 @@
     <div class="govuk-grid-column-two-thirds">
     
 	
-		<h1 class="govuk-heading-xl">Problems with the data<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
+		<h1 class="govuk-heading-xl">ILR file not submitted<span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
         
         <div class="govuk-inset-text">
-            <p>ILR file not submitted. There are errors and warnings for the learner data in your file.</p>
+            <p>There are errors and warnings for the learner data in your file.</p>
             
 </div> 
 		<p><span class="govuk-!-font-weight-bold">Total learners in file</span>: 3,893</p>
