--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,12 +30,13 @@
             <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.1.0<p>08/11/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Private Beta - in progress</p>
+            <p>Private Beta - stopped 19/11/18</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a href="11-1-0/theres_a_problem_datamatch.html">Updated 'theres a problem' page - with app data match</a></li>
                 <li><a href="11-1-0/theres_a_problem.html">Updated 'theres a problem' page - withOUT app data match</a></li>
                 <li><a href="11-1-0/return-period.html">Added 'submitted by' to the submissions history table</a></li>
                 <li><a href="11-1-0/choose_file_to_upload.html">Added 'submission history' to the choose file to upload page</a></li>
+                <li><a href="11-1-0/ilr_data_submitted.html">Updated submitted confirmation page (replicate over all collections)</a></li>
                
             </ul>
         </td>
