--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,21 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+                  <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Fudge 11.2.0<p>28/11/2018</p></th>
+        <td class="govuk-table__cell ">
+            <p>Private Beta - in progress</p>
+            <ul class="govuk-list govuk-list--bullet">             
+                <li><a href="11-1-0/start.html">Updated start page content</a></li>
+                <li><a href="11-1-0/return-period.html">Added reports history and tabs</a></li>
+                <li><a href="11-1-0/eas_choose_file_to_upload.html">Removed link</a>,changed H1 and updated sidebar links</li>
+                <li><a href="11-1-0/esf_choose_file_to_upload.html">Removed link</a>, changed H1 and updated sidebar links</li>
+                <li><a href="11-2-0/choose_file_to_upload.html">ILR specification link updated in sidebar</a></li>               
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="11-1-0/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./11-1-0/start.html">Start now</a></td>
+    </tr>
             <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.1.0<p>08/11/2018</p></th>
         <td class="govuk-table__cell ">
