--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,7 +36,8 @@
                 <li><a href="11-2-0/return-period.html">Added reports history and tabs</a></li>
                 <li><a href="11-2-0/eas_choose_file_to_upload.html">Removed link</a>,changed H1 and updated sidebar links</li>
                 <li><a href="11-2-0/esf_choose_file_to_upload.html">Removed link</a>, changed H1 and updated sidebar links</li>
-                <li><a href="11-2-0/choose_file_to_upload.html">ILR specification link updated in sidebar</a></li>               
+                <li><a href="11-2-0/choose_file_to_upload.html">ILR specification link updated in sidebar</a></li> 
+                <li><a href="11-2-0/eas_data_submitted.html">Added file</a></li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="11-2-0/contents.html">Contents</a></td>
