--- a/app/views/11-2-0/eas_data_submitted.html
+++ b/app/views/11-2-0/eas_data_submitted.html
@@ -22,7 +22,7 @@
            
           </div>
         </div>		
-<!--<p>File: <span class="govuk-!-font-weight-bold">EAS-12345678-8976-20180806-151209.CSV</span></p>-->
+<p>File: <span class="govuk-!-font-weight-bold">EAS-12345678-8976-20180806-151209.CSV</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
