--- a/app/views/11-2-0/choose_file_to_upload.html
+++ b/app/views/11-2-0/choose_file_to_upload.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout_noback_signedin.html" %}
+{% extends "./layout_backtowhat.html" %}
 
 
 {% block pageTitle %}
@@ -20,7 +20,7 @@
 </div>
 
     <form action="your_files_uploading" method="get" class="form">
-	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
+	  <h1 class="govuk-heading-xl">Choose ILR file to upload <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
       <li>it’s in an XML or Zip format</li>
