--- a/app/views/11-2-0/contents.html
+++ b/app/views/11-2-0/contents.html
@@ -98,7 +98,7 @@
 		
 		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (and no file can be submitted)</a></li>
-            <li><a href="./theres_a_problem_datamatch.html">Adding the data match report</a></li>
+            <!--<li><a href="./theres_a_problem_datamatch.html">Adding the data match report</a></li>-->
 			
 		</ul>
 		
