--- a/app/views/11-2-0/start.html
+++ b/app/views/11-2-0/start.html
@@ -35,7 +35,7 @@
 		<ul class="govuk-list govuk-list--bullet">
 			<li>your IdAMS (Information Management Services system) login details</li>
 			<li>an XML or Zip file to upload - for ILR data</li>
-			<li>a CSV file to upload - for ESF data</li>
+			<li>a CSV file to upload - for EAS and ESF data</li>
 		</ul>  
 		    
     </div>
