--- a/app/views/11-2-0/includes/sidebar_help.html
+++ b/app/views/11-2-0/includes/sidebar_help.html
@@ -2,7 +2,7 @@
           <h2 class="govuk-heading-m" id="subsection-title">
             Help and support
           </h2>
-	<p><span class="govuk-!-font-weight-bold">ESFA support desk</span></p>
+	<h3 class="govuk-heading-s">ESFA support desk</h3>
 	<p>Telephone: 0370 267 0001<br/>
 	Monday to Thursday, 8:30am to 5:00pm<br/>
 	Friday, 8:30am to 4:00pm<br/>
