--- a/app/views/11-2-0/return-period.html
+++ b/app/views/11-2-0/return-period.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "./layout_noback_signedin.html" %}
 
 
 {% block pageTitle %}
@@ -10,13 +10,13 @@
 
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Reports <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
+        <h1 class="govuk-heading-xl">Reports</h1>
 
  <p>If you need to correct the data you've submitted, <a href="what_data_do_you_want_to_submit.html">submit another file</a>.</p> 
 
-  <div class="govuk-tabs" data-module="tabs">
+ <div class="govuk-tabs" data-module="tabs">
   <h2 class="govuk-tabs__title">
-    Activity for Manchester provider 1
+    Submission and reports history
   </h2>
 
   <ul class="govuk-tabs__list">
@@ -31,12 +31,14 @@
       </a>
     </li>
     
-  </ul>    
+  </ul>
 
-
-              <section class="govuk-tabs__panel" id="past-day">
+  <section class="govuk-tabs__panel" id="past-day">
     <h2 class="govuk-heading-l" id="submission">Submission history  <span class="govuk-caption-l">RO2</span></h2>
-       <p>Each time you submit a new file your reports will be updated. To view your latest reports you should download the reports for your most recent submission.</p>      
+<p>Each time you submit a new file your reports will be updated. To view your latest reports you should download the reports for your most recent submission.</p>
+      
+      <h3 class="govuk-heading-m">Submissions for 2018 to 2019</h3>
+             
               <table class="govuk-table">
   <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
   <thead class="govuk-table__head">
@@ -52,30 +54,75 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">30 October 2018</th>
+      <th class="govuk-table__header" scope="row">30 October 2018 at 1:00pm</th>
         <td class="govuk-table__cell">ILR</td>
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
         <td class="govuk-table__cell">Bob Afett</td>
          <td class="govuk-table__cell">300</td>
-        <td class="govuk-table__cell">Processing</td>
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
     
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">28 October 2018</th>
+      <th class="govuk-table__header" scope="row">30 October 2018 at 8:00am</th>
         <td class="govuk-table__cell">ESF</td>
         <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
         <td class="govuk-table__cell">Bob Afett</td>
          <td class="govuk-table__cell">295</td>
-        <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a></td>
+        <td class="govuk-table__cell">Failed</td>
         
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">24 October 2018</th>
+      <th class="govuk-table__header" scope="row">24 October 2018 at 1:00pm</th>
         <td class="govuk-table__cell">ILR</td>
         <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
         <td class="govuk-table__cell">Bob Afett</td>
          <td class="govuk-table__cell">200</td>
-        <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a></td>
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
+
+    </tr>
+  </tbody>
+</table>
+      
+      <h3 class="govuk-heading-m">Older submissions</h3>
+      <table class="govuk-table">
+  <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="col">Date and time</th>
+        <th class="govuk-table__header" scope="col">Type</th>
+      <th class="govuk-table__header" scope="col">File</th>
+         <th class="govuk-table__header" scope="col">Submitted by</th>
+        <th class="govuk-table__header" scope="col">Reference</th>
+    <th class="govuk-table__header" scope="col">Reports</th>
+    
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">14 July 2018 at 1:00pm</th>
+        <td class="govuk-table__cell">ILR</td>
+        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-02.XML</a></td>
+        <td class="govuk-table__cell">Bob Afett</td>
+         <td class="govuk-table__cell">300</td>
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
+    
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">18 June 2018 at 1:00pm</th>
+        <td class="govuk-table__cell">ESF</td>
+        <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
+        <td class="govuk-table__cell">Bob Afett</td>
+         <td class="govuk-table__cell">295</td>
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
+        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">19 May 2018 at 1:00pm</th>
+        <td class="govuk-table__cell">ILR</td>
+        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-05092018-01.XML</a></td>
+        <td class="govuk-table__cell">Bob Afett</td>
+         <td class="govuk-table__cell">200</td>
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a></td>
 
     </tr>
   </tbody>
@@ -85,7 +132,7 @@
   </section>
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week">
     <h2 class="govuk-heading-l" id="reports">Reports history</h2>
-        <p>View the final reports from each period at the time of close.</p><p>The reports download includes the last validation and submission files.</p>       
+        <p>The reports download includes the last validation report and submission files. You can <a href="#">view period end reports</a> in the Hub.</p>       
         <h3 class="govuk-heading-m">Academic year 2018 to 2019</h3>
        
         <table class="govuk-table">
@@ -93,14 +140,14 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Return period</th>
-      <th class="govuk-table__header" scope="col">Download</th>
+      <th class="govuk-table__header" scope="col">Final reports at period end</th>
      
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R01</th>
-        <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download reports</a> (Zip, 1.3MB)</td>        
     </tr>    
   </tbody>
 </table>
@@ -119,59 +166,59 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R14</th>
-        <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a> (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R13</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.2MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R12</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.8MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.8MB)</td>        
     </tr>
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R11</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.1MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.1MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R10</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.2MB)</td>        
     </tr>
       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R09</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.9MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.9MB)</td>        
     </tr>
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R08</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.7MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R07</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.7MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R06</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R05</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a> (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R04</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R03</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.5MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.5MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R02</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.7MB)</td>        
     </tr> 
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R01</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.7MB)</td>        
     </tr>     
   </tbody>
 </table>
@@ -189,15 +236,15 @@
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R14</th>
-        <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+        <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R13</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.2MB)</td>        
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">R12</th>
-      <td class="govuk-table__cell"><a href="#">REPORTS-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.8MB)</td>        
+      <td class="govuk-table__cell"><a href="#" title="Download REPORTS-0312210-091400.zip">Download REPORTS-0312210-091400.zip</a>  (Zip, 1.8MB)</td>        
     </tr>      
   </tbody>
 </table>
@@ -205,7 +252,8 @@
         
 
   </section>
-        </div>
+  
+</div>
          
 			
        
