--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
                   <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Fudge 11.2.0<p>28/11/2018</p></th>
         <td class="govuk-table__cell ">
-            <p>Private Beta - in progress</p>
+            <p>Private Beta - stopped 01/12/18</p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>Updated back buttons to go to specific pages</li>
                 <li><a href="11-2-0/start.html">Updated start page content</a></li>
